# varius

./: CLAUDE.md  LICENSE  README.md
Iter/: .gitignore  .php-cs-fixer.cache  .php-cs-fixer.dist.php  CLAUDE.md  README.md  composer.json  env  phpstan.neon
Iter/app/Commands/: CleanupCommand.php  RegionBackfill.php
Iter/app/Config/: App.php  CURLRequest.php  Cache.php  Constants.php  ContentSecurityPolicy.php  Cookie.php  Database.php  DocTypes.php  Email.php  Encryption.php  Events.php  Filters.php  Format.php  Generators.php  GoogleOAuth.php  Images.php  Kint.php  Migrations.php  Mimes.php  Pager.php  Paths.php  (+9 more)
Iter/docs/: SETUP.md  photo-gps-tracker-spec.md  privacy-policy.md  terms-of-service.md
Iter/public/: .htaccess  .user.ini  privacy-policy.html  terms-of-service.html
docs/: realtime-intercom-architecture.md
rtic/: .gitignore  .php-cs-fixer.dist.php  ARCHITECTURE.md  CLAUDE.md  INTEGRATION-TEST-RUNBOOK.md  README.md  composer.json  env  phpstan.neon
rtic/coturn/: .env.example  docker-compose.yml  turnserver.conf
rtic/daemon/: .env.example  README.md  pyproject.toml
rtic/daemon/rtic_daemon/: __init__.py  __main__.py  config.py  daemon.py  errors.py  health.py  pipeline.py  status_reporter.py  supervisor.py
rtic/daemon/systemd/: rtic-daemon.service
rtic/daemon/tests/: test_config.py  test_pipeline.py  test_process.py  test_status_reporter.py
rtic/infra/: README.md
rtic/livekit/: .env.example  README.md  docker-compose.yml  livekit.yaml
rtic/web/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json
(+222 files in other folders)
